--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3> Contact the interviewee. </h3>
+              <p> Introduce yourself, identify the organization, business, or school you are associated with.
+Tell them what your article will be about, and why you would like to interview them. Politely ask if you can interview them. </p>
 
               <!--
 This block contains a photo and has a caption.
