--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <li>
             <div class="content">
               <h3> Contact the interviewee. </h3>
-              <p> Introduce yourself, identify the organization, business, or school you are associated with.Tell them what your article will be about, and why you would like to interview them. Politely ask if you can interview them. </p>
+              <p> Introduce yourself, identify the organization, business, or school you are associated with.Tell them what your article will be about, and why you would like to interview them. Then politely ask if you can interview them. </p>
 
               <!--
 This block contains a photo and has a caption.
