--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3> Bring a recording device to the interview. </h3>
+              <p> You can use your phone or an audio recorder. This way you can focus all your attention on the interview and not scramble to write things down. This will make it easier to include direct quotes when you start writing.</p> 
             </div>
           </li>
 
