--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3> Be courteous and hospitable. </h3>
+              <p> Remember that being interviewed can be stressful, or at least unfamiliar.Arrive on time or a little early.Set up anything you need set up in advance. Sound check your recording device.Thank the person for agreeing to meet.If you are meeting in person, show the interviewee in, offer a seat, and offer water, coffee or tea.</p> 
             </div>
           </li>
 
