--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Add your Things You'll Need.
               <li>Paper</li>
               <li>Laptop</li>
               <li>Audio Recorder</li>
-              <li>Camera or Phone/li>
+              <li>Camera or Phone</li>
               <li>Patience</li>
             </ul>
           </aside>
