--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Times New Roman, sans-serif;         /* CHANGE THE FONT HERE */
-        color:#000000;         /* CHANGE THE FONT COLOR HERE */
+        color:#2f50b4 
+;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
