--- a/index.html
+++ b/index.html
@@ -212,9 +212,7 @@ Customise the visual style and appearance of your guide.
         width:100%;
         font-weight:normal;
         font-family:Times New Roman, sans-serif;         /* CHANGE THE FONT HERE */
-        color:#101b3c 
-
-;         /* CHANGE THE FONT COLOR HERE */
+        color:#101b3c;         /* CHANGE THE FONT COLOR HERE */
       }  
 
       /* PAGE LAYOUT */
