--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D3E3E8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
-        border: 1px solid #366f77;           /* CHANGE THE THINGS BORDER HERE */
+        background-color: #366f77;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        border: 1px solid #101b3c;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
         position:relative;
