--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Customise the visual style and appearance of your guide.
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #101b3c;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
@@ -332,7 +332,7 @@ Customise the visual style and appearance of your guide.
         position:relative;
         margin-bottom:40px;
         overflow:hidden;
-        background:#fff;
+        background:#101b3c;
       }
 
       hr {
@@ -350,7 +350,7 @@ Customise the visual style and appearance of your guide.
 
       /* Hover state styles for list items inside unordered list <li> */
       ul li:hover {
-        background-color: #eedc9c;
+        background-color: #101b3c;
       }
 
 
