--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#000000;         /* CHANGE THE LINK COLOR HERE */
+        color:#101b3c;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
