--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a href="https://www.flickr.com/photos/digiart2001/3351635637" title="An interview being conducted with cameras and microphones shot by Jason Kuffer, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/3578/3351635637_f154125251_c.jpg" ></a>
               <p class="caption"> </p>
             </div>
           </li>
